package organizacion;

public enum Clasificacion {
  MINISTERIO,
  UNIVERSIDAD,
  ESCUELA,
  EMPRESA_SECTOR_PRIMARIO,
  EMPRESA_SECTOR_SECUNDARIO
}
