package transportes;

public enum TipoVehiculo {
  MOTO,
  AUTO,
  CAMIONETA
}
