package trayectos;

public class Distancia {

  private Double unidad;
  private String valor;

  public Distancia(Double unidad, String valor) {
    this.unidad = unidad;
    this.valor = valor;
  }

  public Double getUnidad() {
    return unidad;
  }

  public String getValor() {
    return valor;
  }

}
